--- a/index.html
+++ b/index.html
@@ -25,27 +25,27 @@
                     <!-- .player*6>img[src="images/players/player-$.png"]+h3{Top Player-$} -->
                     <div class="player">
                         <img src="images/players/player-1.png" alt="">
-                        <h3 class="player-name">Top Player-1</h3>
+                        <h3 class="player-name">John Smith</h3>
                     </div>
                     <div class="player">
                         <img src="images/players/player-2.png" alt="">
-                        <h3 class="player-name">Top Player-2</h3>
+                        <h3 class="player-name">Pro Rasel</h3>
                     </div>
                     <div class="player">
                         <img src="images/players/player-3.png" alt="">
-                        <h3 class="player-name">Top Player-3</h3>
+                        <h3 class="player-name">Abu Sufian</h3>
                     </div>
                     <div class="player">
                         <img src="images/players/player-4.png" alt="">
-                        <h3 class="player-name">Top Player-4</h3>
+                        <h3 class="player-name">Shajedul Karim</h3>
                     </div>
                     <div class="player">
                         <img src="images/players/player-5.png" alt="">
-                        <h3 class="player-name">Top Player-5</h3>
+                        <h3 class="player-name">Maruf Ahmed</h3>
                     </div>
                     <div class="player">
                         <img src="images/players/player-6.png" alt="">
-                        <h3 class="player-name">Top Player-6</h3>
+                        <h3 class="player-name">Mujahid</h3>
                     </div>
                 </div>
             </div>
@@ -59,7 +59,7 @@
                         </div>
                         <div class="blog-info">
                             <h3 class="blog-title">13 of My Favorite UI/UX Goodies</h3>
-                            <p class="blog-author">By Danny Sapio</p>
+                            <p class="blog-author">By <a href="">Danny Sapio</a></p>
                         </div>        
                     </article>
                     <article class="blog">
@@ -67,8 +67,8 @@
                             <img src="images/blogs/blog-2.png" alt="">
                         </div>
                         <div class="blog-info">
-                            <h3 class="blog-title">13 of My Favorite UI/UX Goodies</h3>
-                            <p class="blog-author">By Danny Sapio</p>
+                            <h3 class="blog-title">UI cheat sheet:<br> list vs grids</h3>
+                            <p class="blog-author">By <a href="">Tess Gadd</a></p>
                         </div>        
                     </article>
                     <article class="blog">
@@ -76,8 +76,8 @@
                             <img src="images/blogs/blog-3.png" alt="">
                         </div>
                         <div class="blog-info">
-                            <h3 class="blog-title">13 of My Favorite UI/UX Goodies</h3>
-                            <p class="blog-author">By Danny Sapio</p>
+                            <h3 class="blog-title">7 typography tips for interface design</h3>
+                            <p class="blog-author">By <a href="">Jeremiah Lam</a></p>
                         </div>        
                     </article>
                     <article class="blog">
@@ -85,8 +85,8 @@
                             <img src="images/blogs/blog-4.png" alt="">
                         </div>
                         <div class="blog-info">
-                            <h3 class="blog-title">13 of My Favorite UI/UX Goodies</h3>
-                            <p class="blog-author">By Danny Sapio</p>
+                            <h3 class="blog-title">Your logo is<br> copied</h3>
+                            <p class="blog-author">By <a href="">Ferdinand Vogler</a></p>
                         </div>        
                     </article>
                 </div>
@@ -113,10 +113,10 @@
                                 <i class="fa-solid fa-star empty"></i>
                                 <span>4.5</span>
                             </div>
-                        </div>
-                        <div class="course-duration">
-                            <i class="fa-regular fa-clock"></i>
-                            01:30hr
+                            <div class="course-duration">
+                                <i class="fa-regular fa-clock"></i>
+                                01:30hr
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -125,8 +125,8 @@
                         <img src="images/courses/course-2.png" alt="">
                     </div>
                     <div class="course-detail">
-                        <h3 class="course-title">React - The Complete Guide 2020</h3>
-                        <p class="course-author"> Reed Krakoff.</p>
+                        <h3 class="course-title">Powerpoint 2020 Master Powerpoint Cour</h3>
+                        <p class="course-author"> Walter Scott.</p>
                         <!-- <p><a href="">Reed Krakoff.</a></p> -->
                         <div class="course-info">
                             <div>
@@ -137,10 +137,10 @@
                                 <i class="fa-solid fa-star empty"></i>
                                 <span>4.5</span>
                             </div>
-                        </div>
-                        <div class="course-duration">
-                            <i class="fa-regular fa-clock"></i>
-                            01:30hr
+                            <div class="course-duration">
+                                <i class="fa-regular fa-clock"></i>
+                                01:30hr
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -149,7 +149,7 @@
                         <img src="images/courses/course-3.png" alt="">
                     </div>
                     <div class="course-detail">
-                        <h3 class="course-title">React - The Complete Guide 2020</h3>
+                        <h3 class="course-title">The Complete JavaScript Course 2020</h3>
                         <p class="course-author"> Reed Krakoff.</p>
                         <!-- <p><a href="">Reed Krakoff.</a></p> -->
                         <div class="course-info">
@@ -161,10 +161,10 @@
                                 <i class="fa-solid fa-star empty"></i>
                                 <span>4.5</span>
                             </div>
-                        </div>
-                        <div class="course-duration">
-                            <i class="fa-regular fa-clock"></i>
-                            01:30hr
+                            <div class="course-duration">
+                                <i class="fa-regular fa-clock"></i>
+                                01:30hr
+                            </div>
                         </div>
                     </div>
                 </div>
